--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,15 +1,34 @@
-%nav.navbar.navbar-expand-sm.sticky-top.navbar-light{style: "background-color: #BAD3FF"}
-  %a.navbar-brand{href: root_path} Furtweet
-  %button.navbar-toggler{"aria-controls": "navbar", "aria-expanded": "false", "aria-label": "Toggle navigation", "data-target": "#navbar", "data-toggle": "collapse", type: "button"}
-    %span.navbar-toggler-icon
-  #navbar.collapse.navbar-collapse.justify-content-end
-    %ul.navbar-nav.mr-auto
-      %li.nav-item.dropdown
-        %a#dropdown.nav-link.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true", "data-toggle": "dropdown", href: "#"} ドロップダウン
-        .dropdown-menu{"aria-labelledby": "dropdown"}
-          %a.dropdown-item{href: "#"} リンク1
-          %a.dropdown-item{href: "#"} リンク2
-          %a.dropdown-item{href: "#"} リンク3
-    %form.form-inline.my-2.my-md-0
-      %input.form-control.mr-sm-1{placeholder: "Search", type: "search"}
-      %button.btn.btn-outline-info.mt-2.my-sm-0{type: "submit"} Search
+.header
+ .header__menu
+  .header__menu__home 
+   =link_to "#", class:"header___menu__home__btn" do
+    Home
+  .header__menu__movies 
+   =link_to "#", class:"header__menu__movies__btn" do
+    Movies
+  .header__menu__register 
+   =link_to "#", class:"header__menu__register__btn" do
+    Register
+  .header__menu__login 
+   =link_to "#", class:"header__menu__login__btn" do
+    Log in
+  .header__menu__contact 
+   =link_to "#", class:"header__menu__contact__btn" do
+    Contact
+
+.contants 
+ .contants__bg
+  .contants__bg__box
+   .contants__bg__box__name Filmce
+   .contants__bg__box__text To find the movies with your feelings.
+   .contants__bg__box__start 
+    =link_to "#", class:"contants__bg__box__start--btn" do
+     Start now
+   .contents__bg__box__logos 
+    .contents__bg__box__logos__apple 
+     %a{href: "https://apps.apple.com/jp/app/itunes-store/id915061235?mt=8"}
+      = image_tag "https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2016-06-01&kind=iossoftware&bubble=ios_apps" 
+    .contents__bg__box__logos__android 
+     %a{href: "https://apps.apple.com/jp/app/itunes-store/id915061235?mt=8"}
+      = image_tag "https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2016-06-01&kind=iossoftware&bubble=ios_apps"
+
