google playバッジ実装できた
appleバッジの方にmarginつけて微調整した。

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -27,8 +27,7 @@
    .contents__bg__box__logos 
     .contents__bg__box__logos__apple 
      %a{href: "https://apps.apple.com/jp/app/itunes-store/id915061235?mt=8"}
-      = image_tag "https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2016-06-01&kind=iossoftware&bubble=ios_apps" 
-    -# .contents__bg__box__logos__android 
+      = image_tag "https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2016-06-01&kind=iossoftware&bubble=ios_apps",style: 'margin: 0px 0px 12px 0px ' 
      %a{href: "https://play.google.com/store?utm_source=apac_med&utm_medium=hasem&utm_content=Jan0220&utm_campaign=Evergreen&pcampaignid=MKT-DR-apac-jp-1003227-med-hasem-py-Evergreen-Jan0220-Text_Search_BKWS-BKWS%7cONSEM_kwid_43700012434507668_creativeid_287118496246_device_c_kwd_kwd-28432345789_geoid_1028853_network_g&gclid=CjwKCAiA1L_xBRA2EiwAgcLKA-XGHOWjDaPc5hF8JXG7m0ZrlccbwJSflm9FqihRyn3MdnDPLJ157BoC8isQAvD_BwE&gclsrc=aw.ds&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"}
-      = image_tag "https://play.google.com/intl/en_us/badges/static/images/badges/ja_badge_web_generic.png",size:"100×100"
+      = image_tag "https://play.google.com/intl/en_us/badges/static/images/badges/ja_badge_web_generic.png", width:"165",height:"63",style: 'margin: px 0px 0px 0px;'
 
