--- a/app/assets/stylesheets/modules/posts.scss
+++ b/app/assets/stylesheets/modules/posts.scss
@@ -81,21 +81,21 @@ a:hover{
       margin-top: 50px;
       color: black;
       font-family: 'Titillium Web', sans-serif;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     &__start--btn:hover{
       background-color: red;
     }
     &__logos{
-      display: flex;
     &__apple{
       display:inline-block;
       width:135px;
       height:40px;
     }
-    // &__android{
-    //   width:160px;
-    // }
+    &__android{
+      width: 155px; 
+      　height: 60px; 
+    }
   }
 }
 }
