--- a/app/assets/stylesheets/modules/posts.scss
+++ b/app/assets/stylesheets/modules/posts.scss
@@ -9,14 +9,12 @@ a{
   color: white;
 }
 
-a:hover{
-  color: white;
-}
-
 .header{
   height: 70px;
   width: 100%;
   background-color: black;
+  position: fixed;
+  z-index: 5;
   &__menu{
     line-height: 70px;
     display: flex;
@@ -99,4 +97,147 @@ a:hover{
   }
 }
 }
+}
+
+
+.purpose{
+  background-color: white;
+  height: 400px;
+  width: 100%;
+  margin: 0 auto;
+  &__title{
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    font-size: 40px;
+  }
+  &__text{
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+  &__select{
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+}
+
+.logobox{
+  height: 600px;
+  width: 100%;
+&__logos1{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  &__heartbroke{
+    margin-right: 100px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+  &__study{
+    margin-right: 20px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+
+}
+
+&__logos2{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  &__technology{
+    margin-right: 100px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+  &__adventurous{
+    margin-right: 20px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+
+}
+
+&__logos3{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  &__scary{
+    margin-right: 100px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+  &__surprise{
+    margin-right: 20px;
+    text-align: center;
+    font-family: 'Titillium Web', sans-serif;
+  }
+}
+}
+
+.footer{
+  height: 40px;
+  width: 100%;
+  background-color: black;
+  bottom: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+      font-family: 'Titillium Web', sans-serif;
+  &__logo{
+    line-height: 40px;
+    color: white;
+    font-size: 10px;
+    font-family: 'Titillium Web', sans-serif;
+    margin-left: 30px;
+  }
+  &__icon{
+    display: flex;
+    justify-content: right;
+    line-height: 40px;
+    &__google{
+      margin-right: 10px;
+    }
+    &__google:hover{
+      background-color: red;
+    }
+    &__facebook{
+      margin-right: 10px;
+    }
+    &__facebook:hover{
+      background-color: blue;
+    }
+    &__instagram{
+      margin-right: 10px;
+    }
+    &__instagram:hover{
+      background-color: purple;
+    }
+    &__twitter{
+      margin-right: 30px;
+    }
+    &__twitter:hover{
+      background-color: skyblue;
+    }
+  }
+}
+
+.youtube{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-evenly;
+  &__text{
+    width: 560px;
+    height: 315px;
+    justify-content: right;
+    font-size: 40px;
+    font-family: 'Titillium Web', sans-serif;
+    &__comment{
+      font-family: 'Titillium Web', sans-serif;
+      font-size: 24px;
+      margin-top: 50px;
+    }
+  }
 }
