--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -48,29 +48,29 @@
 .logobox
  .logobox__logos1
   .logobox__logos1__heartbroke
-   =link_to image_tag("/heart.png", width:"100", height:"100"), "#" 
+   =link_to image_tag("heart.png", width:"100", height:"100"), "#" 
    %br
    Heartbreak ?
   .logobox__logos1__study
-   =link_to image_tag("/study.png", width:"100",height:"98"), "#"
+   =link_to image_tag("study.png", width:"100",height:"98"), "#"
    %br 
    Study ?
  .logobox__logos2
   .logobox__logos2__technology
-   =link_to image_tag("/technology.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("technology.png", width:"100",height:"98"), "#" 
    %br
    Technology ?
   .logobox__logos2__adventurous
-   =link_to image_tag("/adventurous.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("adventurous.png", width:"100",height:"98"), "#" 
    %br
    Adventurous ?
  .logobox__logos3
   .logobox__logos3__scary
-   =link_to image_tag("/scary.png", width:"100",height:"98",class:"hover10"), "#" 
+   =link_to image_tag("scary.png", width:"100",height:"98",class:"hover10"), "#" 
    %br
    Scary ?
   .logobox__logos3__surprise
-   =link_to image_tag("/surprise.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("surprise.png", width:"100",height:"98"), "#" 
    %br
    Surprise ?
  
