--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,16 +1,16 @@
 .header
  .header__menu
   .header__menu__home 
-   =link_to "#", class:"header___menu__home__btn" do
+   =link_to root_path, class:"header___menu__home__btn" do
     Home
   .header__menu__movies 
    =link_to "#", class:"header__menu__movies__btn" do
     Movies
   .header__menu__register 
-   =link_to "#", class:"header__menu__register__btn" do
+   =link_to new_user_registration_path, class:"header__menu__register__btn" do
     Register
   .header__menu__login 
-   =link_to "#", class:"header__menu__login__btn" do
+   =link_to new_user_session_path, class:"header__menu__login__btn" do
     Log in
   .header__menu__contact 
    =link_to "#", class:"header__menu__contact__btn" do
