--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -1,56 +1,106 @@
-.account-page {
-  .account-page__inner {
-    width: 980px;
-    margin: 60px auto;
-    padding: 60px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+.header{
+  height: 70px;
+  width: 100%;
+  background-color: black;
+  position: fixed;
+  &__menu{
+    line-height: 70px;
+    display: flex;
+    justify-content: left;
+    font-family: 'Titillium Web', sans-serif;
+    &__home{
+      margin-left: 30px;
+      margin-right: 30px; 
+    } 
+    &__movies{
+      margin-right: 30px;
+    } 
+    &__register{
+      margin-right: 30px;
+    } 
+    &__login{
+      margin-right: 30px;
+    } 
+    &__contact{
+      margin-right: 30px;
+    } 
+  }
+}
 
-    .account-page__inner--left, .account-page__inner--right {
-      float: left;
-      width: 50%;
+.account-page {
+  background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
+  background-size: cover;
+  height: 100vh;
+  .account-page__inner {
+    background-color: #fff;
+    margin: 0 auto;
+    width: 70%;
+    height: 100vh;
+    overflow: scroll;
+    .account-page__inner__top{
+      &__s1{
+        margin-top: 70px;
+        font-family: 'Titillium Web', sans-serif;
+        font-size: 50px;
+      }
+      height: 270px;
+      text-align: center;
+      padding-top: 40px;
     }
     &:after {
       clear: both;
       content: "";
       display: block;
     }
-  }
-
-  .account-page__header {
-    h2 {
-      margin-bottom: 10px;
-      letter-spacing: 3px;
-      font-size: 40px;
-      font-weight: 200;
-
-      &:after {
-        content: '';
-        display: block;
-        width: 60px;
-        margin-top: 5px;
-        border-bottom: 1px solid #38aef0;
-      }
+    &__under{
+      text-align: center;
     }
+  }
 
     h5 {
       margin-bottom: 20px;
       font-size: 14px;
       font-weight: 200;
     }
+    .actions{
+      height: 150px;
+      width: 100%;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      &__btn{
+        border: none;
+        border-radius:80px ;
+        height: 50px;
+        width: 110px;
+        font-family: 'Titillium Web', sans-serif;
+        color: black;
+        background-color: yellow;
+        font-size: 14px;  
+      }
+      &__btn:hover{
+        background-color: red;
+      }
+    }
 
     .btn {
+      height: 50px;
+      border-radius:80px ;
+      width: 60px;
+      font-family: 'Titillium Web', sans-serif;
       margin-top: 20px;
-      color: #fff;
-      background-color: #ccc;
+      color: black;
+      background-color: yellow;
       font-size: 14px;
+    }
+    .btn:hover{
+      background-color: red;
     }
   }
 
   .field {
+    font-family: 'Titillium Web', sans-serif;
     margin-bottom: 10px;
-
     .field-label {
       padding: 10px 0;
       letter-spacing: 1px;
@@ -64,8 +114,7 @@
 
     .field-input {
       input {
-        width: 100%;
-        padding: 10px;
+        width: 300px;
         letter-spacing: 1px;
       }
     }
@@ -80,6 +129,9 @@
     text-align: center;
     border: none;
     border-radius: 2px;
+  }
+  .btn:hover{
+    background-color: red;
   }
 
   input[type='submit'] {
@@ -113,29 +165,99 @@
       }
     }
   }
-}
 
 #error_explanation {
   margin: 20px 0;
   padding: 20px 30px;
-  border: 1px solid #ddd;
-  border-radius: 2px;
 
   h2 {
     margin-bottom: 10px;
     color: #d65f4c;
-    font-size: 14px;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'Titillium Web', sans-serif;
   }
 
   ul {
     margin: 0;
-    padding-left: 17px;
-    list-style: square;
+    list-style: none;
+    padding-left: 20px;
+    font-family: 'Titillium Web', sans-serif;
+    list-style: url('ghost.png') inside;
   }
+
 
   li {
     margin: 0;
     padding: 0;
-    font-size: 13px;
+    font-size: 20px;
+    font-family: 'Titillium Web', sans-serif;
+  }
+}
+
+
+.footer{
+  height: 40px;
+  width: 100%;
+  background-color: black;
+  bottom: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+      font-family: 'Titillium Web', sans-serif;
+  &__logo{
+    line-height: 40px;
+    color: white;
+    font-size: 10px;
+    font-family: 'Titillium Web', sans-serif;
+    margin-left: 30px;
+  }
+  &__icon{
+    display: flex;
+    justify-content: right;
+    line-height: 40px;
+    &__google{
+      margin-right: 10px;
+    }
+    &__google:hover{
+      background-color: red;
+    }
+    &__facebook{
+      margin-right: 10px;
+    }
+    &__facebook:hover{
+      background-color: blue;
+    }
+    &__instagram{
+      margin-right: 10px;
+    }
+    &__instagram:hover{
+      background-color: purple;
+    }
+    &__twitter{
+      margin-right: 30px;
+    }
+    &__twitter:hover{
+      background-color: skyblue;
+    }
+  }
+}
+
+.youtube{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-evenly;
+  &__text{
+    width: 560px;
+    height: 315px;
+    justify-content: right;
+    font-size: 40px;
+    font-family: 'Titillium Web', sans-serif;
+    &__comment{
+      font-family: 'Titillium Web', sans-serif;
+      font-size: 24px;
+      margin-top: 50px;
+    }
   }
 }
