--- a/app/assets/stylesheets/modules/posts.scss
+++ b/app/assets/stylesheets/modules/posts.scss
@@ -15,6 +15,8 @@ a{
   background-color: black;
   position: fixed;
   z-index: 5;
+  display: flex;
+  justify-content: space-between;
   &__menu{
     line-height: 70px;
     display: flex;
@@ -36,6 +38,19 @@ a{
     &__contact{
       margin-right: 30px;
     } 
+  }
+  &__user{
+    display: flex;
+    justify-content: right;
+    line-height: 70px;;
+    color: white;
+    font-family: 'Titillium Web', sans-serif;
+    &__name{
+      margin-right: 30px;
+    }
+    &__edit{
+      margin-right: 30px;
+    }
   }
 }
 
