--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,6 +16,13 @@
    =link_to "#", class:"header__menu__contact__btn" do
     Contact
 
+ .header__user
+  .header__user__name
+   = current_user.name
+  .header__user__edit
+   = link_to edit_user_path(current_user) do
+    = icon('fas', 'cog', class: 'icon')
+
 .contants 
  .contants__bg
   .contants__bg__box
