感情毎にユーザー名と映画名を投稿できるようになった。
映画のポスターと投稿一覧のビューはまだ。

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -60,29 +60,29 @@
 .logobox
  .logobox__logos1
   .logobox__logos1__heartbroke
-   =link_to image_tag("heart.png", width:"100", height:"100"), "#" 
+   =link_to image_tag("heart.png", width:"100", height:"100"), feeling_path(id: 1) 
    %br
    Heartbreak ?
   .logobox__logos1__study
-   =link_to image_tag("study.png", width:"100",height:"98"), "#"
+   =link_to image_tag("study.png", width:"100",height:"98"),feeling_path( id: 2)
    %br 
    Study ?
  .logobox__logos2
   .logobox__logos2__technology
-   =link_to image_tag("technology.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("technology.png", width:"100",height:"98"), feeling_path(id: 3)
    %br
    Technology ?
   .logobox__logos2__adventurous
-   =link_to image_tag("adventurous.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("adventurous.png", width:"100",height:"98"), feeling_path(id: 4)
    %br
    Adventurous ?
  .logobox__logos3
   .logobox__logos3__scary
-   =link_to image_tag("scary.png", width:"100",height:"98",class:"hover10"), "#" 
+   =link_to image_tag("scary.png", width:"100",height:"98",class:"hover10"), feeling_path(id: 5)
    %br
    Scary ?
   .logobox__logos3__surprise
-   =link_to image_tag("surprise.png", width:"100",height:"98"), "#" 
+   =link_to image_tag("surprise.png", width:"100",height:"98"), feeling_path(id: 6)
    %br
    Surprise ?
  
