マイページ、投稿ページの表示

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -13,8 +13,8 @@
    =link_to new_user_session_path, class:"header__menu__login__btn" do
     Log in
   .header__menu__contact 
-   =link_to "#", class:"header__menu__contact__btn" do
-    Contact
+   =link_to new_feeling_path, class:"header__menu__contact__btn" do
+    Post
 
 -#  .header__user
 -#   .header__user__name
