--- a/app/assets/stylesheets/modules/feelings.scss
+++ b/app/assets/stylesheets/modules/feelings.scss
@@ -1,45 +1,106 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto|Titillium+Web&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap);
 
-.posts{
-    background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
-    background-size: cover;
-    overflow: scroll;
-    height: 100vh;
-    width: 100%;
-  &__box{
-    height: 100vh;
-    width: 70%;
-    margin-left: 50px;
-    margin-top: 70px;
-    display: flex;
-    justify-content: center; 
-    &__left{
-      margin: 0 auto;
-      width: 50%;
-    &__name{
-      margin: 0 0 0 auto;
+// .posts{
+//     background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
+//     background-size: cover;
+//     overflow: scroll;
+//     height: 100vh;
+//     width: 100%;
+//   &__box{
+//     height: 100vh;
+//     width: 70%;
+//     margin-left: 50px;
+//     margin-top: 70px;
+//     display: flex;
+//     justify-content: center; 
+//     &__left{
+//       margin: 0 auto;
+//       width: 40%;
+//     &__name{
+//       margin: 0 0 0 auto;
 
+
+//     }
+//   }
+//    &__right{
+//      width: 40%;
+//      margin-left: 20px;
+//     &__content{
+//         line-height: 50px;
+//         color:white;
+//         font-size: 30px;
+//         font-family: 'Titillium Web', sans-serif;
+//   }
+// }
+//   }
+// }
+
+.posts{
+  // background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
+  background-color: white;
+  background-size: cover;
+  overflow: scroll;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  font-family: 'Titillium Web', sans-serif;
+  &__box{
+    width: 300px;
+    height: calc(100vh - 200px);
+    margin-left: 50px;
+    margin-top: 120px;
+    margin-bottom: 100px;
+    color: white;
+    background-color: black;
+    border-radius: 50px;
+    text-align: center;
+    position: relative;
+    &__user{
+      position: absolute;
+      right: 40%;
+      bottom: 0;
       height:50px;
       width: 50px;
       border-radius:50%;
       line-height:50px;
       text-align:center;
-      font-family: 'Titillium Web', sans-serif;
       background-color: yellow;
+      color: black; 
+      margin-bottom: 10px;
+    }
+    &__name{
+      font-size: 20px;
+    }
+    &__comment{
+      width: 100%;
+      position: absolute;
+      bottom: 60px;
+      text-align: center;
+    }
+    &__image{
+      margin-left: 20px;
+      margin-right: 20px;
+      overflow: scroll;
+    height: calc(100vh - 320px);
     }
   }
-   &__right{
-     width: 50%;
-     margin-left: 20px;
-    &__content{
-        line-height: 50px;
-        color:white;
-        font-size: 30px;
-        font-family: 'Titillium Web', sans-serif;
-  }
 }
-  }
+
+.submit{
+  width: 100px;
+  font-family: 'Titillium Web', sans-serif;
+  color: white;
+  margin-bottom: 70px;
+}
+
+
+.movie-icon{
+  cursor: pointer;
+  font-size:1.5em;
+}
+.hidden{
+  display: none;
 }
 //     &__form{
 //       height: 100px;
