--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,27 +6,29 @@
   .header__menu__movies 
    =link_to "#", class:"header__menu__movies__btn" do
     Movies
-  .header__menu__register 
-   =link_to new_user_registration_path, class:"header__menu__register__btn" do
-    Register
-  .header__menu__login 
-   =link_to new_user_session_path, class:"header__menu__login__btn" do
-    Log in
+  - if user_signed_in?
+   =render :partial => "index"
+  -#  .header__menu__register 
+  -#   =link_to new_user_registration_path, class:"header__menu__register__btn" do
+  -#    Register
+  -#  .header__menu__login 
+  -#   =link_to new_user_session_path, class:"header__menu__login__btn" do
+  -#    Log in
   .header__menu__contact 
-   =link_to "#", class:"header__menu__contact__btn" do
-    Contact
+   =link_to new_feeling_path, class:"header__menu__contact__btn" do
+    Post
 
  .header__user
   -# - if user_signed_in?
   -#  = link_to current_user.name, class: "header_user_name" do
   -#  = link_to edit_user_path(current_user),class:"header_user_edit" do
   -#   = icon('fas', 'cog', class: 'icon')
-
-  .header__user__name
-   = current_user.name
-  .header__user__edit
-   = link_to edit_user_path(current_user) do
-    = icon('fas', 'cog', class: 'icon')
+  - if user_signed_in?
+   .header__user__name
+    = link_to current_user.name , user_path(current_user)
+   .header__user__edit
+    = link_to edit_user_path(current_user) do
+     = icon('fas', 'cog', class: 'icon')
 
 .contants 
  .contants__bg
