--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -13,16 +13,16 @@
    =link_to new_user_session_path, class:"header__menu__login__btn" do
     Log in
   .header__menu__contact 
-   =link_to "#", class:"header__menu__contact__btn" do
-    Contact
-
+   =link_to new_feeling_path, class:"header__menu__contact__btn" do
+    Post
  .header__user
-  .header__user__name
-   = current_user.name
-  .header__user__edit
-   = link_to edit_user_path(current_user) do
-    = icon('fas', 'cog', class: 'icon')
-    
+  - if user_signed_in?
+   .header__user__name
+    = link_to current_user.name , user_path(current_user)
+   .header__user__edit
+    = link_to edit_user_path(current_user) do
+     = icon('fas', 'cog', class: 'icon')
+
 .account-page
  .account-page__inner
   .account-page__inner__top
