--- a/app/assets/stylesheets/modules/feelings.scss
+++ b/app/assets/stylesheets/modules/feelings.scss
@@ -1,41 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto|Titillium+Web&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap);
 
-// .posts{
-//     background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
-//     background-size: cover;
-//     overflow: scroll;
-//     height: 100vh;
-//     width: 100%;
-//   &__box{
-//     height: 100vh;
-//     width: 70%;
-//     margin-left: 50px;
-//     margin-top: 70px;
-//     display: flex;
-//     justify-content: center; 
-//     &__left{
-//       margin: 0 auto;
-//       width: 40%;
-//     &__name{
-//       margin: 0 0 0 auto;
-
-
-//     }
-//   }
-//    &__right{
-//      width: 40%;
-//      margin-left: 20px;
-//     &__content{
-//         line-height: 50px;
-//         color:white;
-//         font-size: 30px;
-//         font-family: 'Titillium Web', sans-serif;
-//   }
-// }
-//   }
-// }
-
+// 当初のiphone型のデザイン用のscss
 .posts{
   // background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
   background-color: white;
