--- a/app/assets/stylesheets/modules/form.scss
+++ b/app/assets/stylesheets/modules/form.scss
@@ -33,7 +33,6 @@
       }
     }
     &__comment{
-      width: 500px;
       height: 20%;
       margin: 0 auto;
       margin-bottom: 40px;
@@ -70,6 +69,9 @@
 
 input[type="submit"]{
   background-color:yellow;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
   color: black;
   text-decoration: none;
 }
@@ -82,10 +84,12 @@ input[type="submit"]:hover{
 
 input[type="text"],
 textarea {
+  width: 360px;
   outline: none;
   border: 1px solid #aaa;
   -webkit-transition: all .3s;
   transition: all .3s;
+  
 }
 input[type="text"]:focus,
 textarea:focus {
