--- a/app/views/feelings/show.html.haml
+++ b/app/views/feelings/show.html.haml
@@ -1,41 +1,14 @@
 .header
- .header__menu
-  .header__menu__home 
-   =link_to root_path, class:"header___menu__home__btn" do
-    Home
-  .header__menu__movies 
-   =link_to "#", class:"header__menu__movies__btn" do
-    Movies
-  .header__menu__register 
-   =link_to new_user_registration_path, class:"header__menu__register__btn" do
-    Register
-  .header__menu__login 
-   =link_to new_user_session_path, class:"header__menu__login__btn" do
-    Log in
-  .header__menu__contact 
-   =link_to new_feeling_path, class:"header__menu__contact__btn" do
-    Post
+ = render "layouts/shared/header"
 
- .header__user
-  - if user_signed_in?
-   .header__user__name
-    = link_to current_user.name , user_path(current_user)
-   .header__user__edit
-    = link_to edit_user_path(current_user) do
-     = icon('fas', 'cog', class: 'icon')
-
-.posts
+.movie
  - @feeling.movies.each do |movie|
-  .posts__box
-   .posts__box__name
-    = link_to movie_path(movie.id) do
-     = movie.name
-   .posts__box__image
+  .movie__box
+   .movie__box__mi1
     = image_tag movie.image.to_s
-   .posts__box__comment
-    = movie.text
-   .posts__box__user
-    = movie.user.name
+   .movie__box__name
+    = link_to movie_path(movie.id),class: "link" do
+     = movie.name
 
 -#  .posts__form
 -#   = form_for @movie, url: movies_path, method: :post do |movies_form|
@@ -55,18 +28,4 @@
 
 
 .footer
- .footer__logo
-  @2020 Daichi.T All rights reserved.
- .footer__icon
-  .footer__icon__google
-   = link_to "https://www.google.co.jp/maps/?hl=ja", class: "contents__btn" do
-    = icon('fab', 'google')
-  .footer__icon__facebook
-   = link_to "https://www.facebook.com/", class: "contents__btn" do
-    = icon('fab', 'facebook-square')
-  .footer__icon__instagram
-   = link_to "https://www.instagram.com/", class: "contents__btn" do
-    = icon('fab', 'instagram')
-  .footer__icon__twitter
-   = link_to "https://twitter.com/", class: "contents__btn" do
-    = icon('fab', 'twitter')
+ = render "layouts/shared/footer"
