--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -28,11 +28,11 @@
 }
 
 .account-page {
-  background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
+  background-image: url("CanineInbornGull-small.gif");
   background-size: cover;
   height: 100vh;
   .account-page__inner {
-    background-color: #fff;
+    color: white;
     margin: 0 auto;
     width: 70%;
     height: 100vh;
