--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -21,7 +21,7 @@
    = link_to "https://www.google.co.jp/maps/?hl=ja", class: "contents__btn" do
     = icon('fab', 'google')
   .footer__icon__facebook
-   = link_to "https://www.facebook.com/", class: "contents__btn" do
+   = link_to "https://www.facebook.com/Filmce-101412748111816/?modal=admin_todo_tour", class: "contents__btn" do
     = icon('fab', 'facebook-square')
   .footer__icon__instagram
    = link_to "https://www.instagram.com/", class: "contents__btn" do
