--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -13,6 +13,9 @@
    User Review
    %br
    = @movie.text
+   %br
+  .movie__poster__user
+   = @movie.user.name
 
  .movie__container
   .movie__container__comment
