--- a/app/assets/stylesheets/modules/comment.scss
+++ b/app/assets/stylesheets/modules/comment.scss
@@ -2,11 +2,18 @@
 .movie{
   display: flex;
   font-family: 'Titillium Web', sans-serif;
+  // background-image: url("5830c8571d0ed3354d689c0d7bd7892a");
+  // background-repeat:  no-repeat;   
+  // background-size: cover;
+  // background-position: center;             /* 画像のサイズを指定    */
+  // width:100%; 
   &__poster{
     width: 50%;
     height: 100vh;
     margin-top: 100px;
     text-align: center;
+    font-weight: bold;
+    font-size: 20px;
     &__image{
       margin-bottom: 20px;
     }
@@ -17,10 +24,20 @@
     &__text{
       font-weight: bold;
     }
+    &__user{
+      margin: 0 auto;
+      height:50px;
+      width: 50px;
+      border-radius:50%;
+      line-height:50px;
+      background-color: yellow;
+      color: black; 
+      font-size: 16px;
+    }
   }
   &__container{
     margin-top: 100px;
-    background-color: white;
+    // background-color: white;
     height: 100vh;
     width: 50%;
     color: red($color: #000000);
