--- a/app/assets/stylesheets/modules/form.scss
+++ b/app/assets/stylesheets/modules/form.scss
@@ -1,5 +1,5 @@
 .form{
-  background-image: url("https://i.ytimg.com/vi/YGnEl88H-PY/maxresdefault.jpg");
+  background-image: url("giphy (2)");
   background-size: cover;
   height: 100vh;
   color:black;
@@ -9,7 +9,7 @@
     margin: 0 auto;
     height: calc(100vh-110px);
     width: 50%;
-    padding-top: 200px;
+    padding-top: 150px;
     font-family: 'Titillium Web', sans-serif;
     color: white;
     text-align: center;
