--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -28,7 +28,7 @@
 }
 
 .account-page {
-  background-image: url("CanineInbornGull-small.gif");
+  background-image: image_url("CanineInbornGull-small.gif");
   background-size: cover;
   height: 100vh;
   .account-page__inner {
