--- a/app/assets/stylesheets/modules/form.scss
+++ b/app/assets/stylesheets/modules/form.scss
@@ -1,5 +1,5 @@
 .form{
-  background-image: url("giphy (2)");
+  background-image: image_url("giphy (2)");
   background-size: cover;
   height: 100vh;
   color:black;
