--- a/app/assets/stylesheets/modules/form.scss
+++ b/app/assets/stylesheets/modules/form.scss
@@ -1,6 +1,8 @@
 .form{
-  background-image: image_url("giphy (2)");
+  background-image: image_url("haikei.png");
+  background-repeat:  no-repeat;   
   background-size: cover;
+  background-position: 30% 60%; 
   height: 100vh;
   color:black;
   margin: 0 auto;
