--- a/app/assets/stylesheets/modules/posts.scss
+++ b/app/assets/stylesheets/modules/posts.scss
@@ -55,10 +55,10 @@ a{
 }
 
 .contants{
-  background-image: image_url("tumblr_30d670d7637fc673adb3e479e1fb5e77_77be395c_500 (1)");
+  background-image: image_url("haikei.png");
   background-repeat:  no-repeat;   
   background-size: cover;
-  background-position: center;             /* 画像のサイズを指定    */
+  background-position: 30% 60%;             /* 画像のサイズを指定    */
   width:100%;                              /* 横幅のサイズを指定    */
   height:400px; 
   position: relative;   
